--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethjs-abi",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "./src/index.js",
   "scripts": {
@@ -10,13 +10,15 @@
   "dependencies": {
     "rlp": "2.0.0",
     "bn.js": "^4.4.0",
-    "hash.js": "1.0.3"
+    "hash.js": "1.0.3",
+    "ethjs-sha3": "0.0.1"
   },
   "devDependencies": {
-    "nodeunit": "0.9.1",
     "ethereumjs-util": "4.3.0",
     "ethereumjs-vm": "1.4.0",
-    "solc": "0.3.5"
+    "nodeunit": "0.9.1",
+    "solc": "0.3.5",
+    "tape": "^4.6.3"
   },
   "keywords": [
     "ethereum",
