--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "ethjs-abi",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "./src/index.js",
   "scripts": {
+  },
+  "scripts": {
+    "start": "npm test",
     "test": "node ./node_modules/tape/bin/tape ./src/tests/test.index.js",
-    "test:solidity-coder": "node ./node_modules/.bin/nodeunit ./src/tests/test-solidity-coder.js"
+    "test:solidity-coder": "node ./node_modules/.bin/nodeunit ./src/tests/test-solidity-coder.js",
+    "release": "npmpub",
+    "pretest": "npm run lint",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore",
+    "lint:js": "npm run lint:eslint -- . ",
+    "lint:staged": "lint-staged",
+    "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
   },
   "dependencies": {
     "rlp": "2.0.0",
@@ -18,7 +28,21 @@
     "ethereumjs-vm": "1.4.0",
     "nodeunit": "0.9.1",
     "solc": "0.3.5",
-    "tape": "^4.6.3"
+    "tape": "^4.6.3",
+
+    "babel-eslint": "7.1.0",
+    "chai": "^3.5.0",
+    "coveralls": "2.11.9",
+    "eslint": "2.10.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-import-resolver-webpack": "0.2.4",
+    "eslint-plugin-import": "1.8.0",
+    "eslint-plugin-jsx-a11y": "1.2.0",
+    "eslint-plugin-react": "5.1.1",
+    "eventsource-polyfill": "0.9.6",
+    "lint-staged": "1.0.1",
+    "mocha": "^3.1.2",
+    "pre-commit": "1.1.3"
   },
   "keywords": [
     "ethereum",
@@ -30,5 +54,60 @@
     "type": "git",
     "url": "git://github.com/silentcicero/ethers-abi"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": [
+            "./src"
+          ]
+        }
+      ]
+    ]
+  },
+  "lint-staged": {
+    "lint:eslint": "*.js"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "env": {
+      "node": true,
+      "mocha": true,
+      "es6": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "rules": {
+      "import/no-unresolved": 2,
+      "comma-dangle": [
+        2,
+        "always-multiline"
+      ],
+      "indent": [
+        2,
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "no-console": 1,
+      "max-len": 0,
+      "prefer-template": 2,
+      "no-use-before-define": 0,
+      "newline-per-chained-call": 0,
+      "arrow-body-style": [
+        2,
+        "as-needed"
+      ]
+    }
+  },
+  "pre-commit": "lint:staged"
 }
