--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "./src/index.js",
   "scripts": {
-  },
-  "scripts": {
     "start": "npm test",
     "test": "node ./node_modules/tape/bin/tape ./src/tests/test.index.js",
     "test:solidity-coder": "node ./node_modules/.bin/nodeunit ./src/tests/test-solidity-coder.js",
@@ -15,7 +13,12 @@
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
-    "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
+    "test-travis": "node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- src/tests/**/*.js -R spec --timeout 2000000",
+    "coveralls": "npm run test-travis && cat ./coverage/lcov.info | coveralls"
+  },
+  "engines": {
+    "npm": ">=3",
+    "node": ">=6.5.0"
   },
   "dependencies": {
     "rlp": "2.0.0",
@@ -30,6 +33,7 @@
     "solc": "0.3.5",
     "tape": "^4.6.3",
 
+    "istanbul": "0.4.5",
     "babel-eslint": "7.1.0",
     "chai": "^3.5.0",
     "coveralls": "2.11.9",
