--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethjs-abi",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "lib/index.js",
   "files": [
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "bn.js": "4.11.6",
-    "ethjs-sha3": "0.1.2",
+    "js-sha3": "0.5.5",
     "number-to-bn": "1.4.0"
   },
   "devDependencies": {
