add back numerically indexed params per default Also change back package.json to correct name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethjs-abi-pelle",
+  "name": "ethjs-abi",
   "version": "0.1.8",
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "lib/index.js",
