--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/ethjs/ethers-abi"
+    "url": "git://github.com/ethjs/ethjs-abi"
   },
   "license": "MIT",
   "lint-staged": {
