--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethjs-abi",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "Just the Ethereum encoding and decoding methods from the ethers-io-wallet.",
   "main": "lib/index.js",
   "files": [
@@ -137,7 +137,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/ethjs/ethers-abi"
+    "url": "git://github.com/ethjs/ethjs-abi"
   },
   "license": "MIT",
   "lint-staged": {
